// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultUnlocker renders component 1`] = `
<WithStyles(Paper)
  className="paper-mock"
>
  <WithStyles(Grid)
    container={true}
  >
    <WithStyles(Grid)
      item={true}
    >
      <React.Memo
        handleSetPassword={[MockFunction]}
        handleTogglePassword={[MockFunction]}
        label="Master password"
        password=""
        passwordVisible={false}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
    >
      <React.Memo
        className="fab-mock"
        disabled={false}
        label="Unlock"
        loading={false}
        onClick={[MockFunction]}
        success={false}
      >
        <pure(LockOpenIcon) />
      </React.Memo>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <React.Memo
    message=""
    onClose={[MockFunction]}
    open={false}
    variant="error"
  />
</WithStyles(Paper)>
`;

exports[`VaultUnlocker renders error 1`] = `
<WithStyles(Paper)
  className="paper-mock"
>
  <WithStyles(Grid)
    container={true}
  >
    <WithStyles(Grid)
      item={true}
    >
      <React.Memo
        handleSetPassword={[MockFunction]}
        handleTogglePassword={[MockFunction]}
        label="Master password"
        password="master password"
        passwordVisible={false}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
    >
      <React.Memo
        className="fab-mock"
        disabled={false}
        label="Unlock"
        loading={false}
        onClick={[MockFunction]}
        success={false}
      >
        <pure(LockOpenIcon) />
      </React.Memo>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <React.Memo
    message="something failed"
    onClose={[MockFunction]}
    open={true}
    variant="error"
  />
</WithStyles(Paper)>
`;

exports[`VaultUnlocker renders password visible 1`] = `
<WithStyles(Paper)
  className="paper-mock"
>
  <WithStyles(Grid)
    container={true}
  >
    <WithStyles(Grid)
      item={true}
    >
      <React.Memo
        handleSetPassword={[MockFunction]}
        handleTogglePassword={[MockFunction]}
        label="Master password"
        password="master password"
        passwordVisible={true}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
    >
      <React.Memo
        className="fab-mock"
        disabled={false}
        label="Unlock"
        loading={false}
        onClick={[MockFunction]}
        success={false}
      >
        <pure(LockOpenIcon) />
      </React.Memo>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <React.Memo
    message=""
    onClose={[MockFunction]}
    open={false}
    variant="error"
  />
</WithStyles(Paper)>
`;

exports[`VaultUnlocker renders unlocked 1`] = `
<WithStyles(Paper)
  className="paper-mock"
>
  <WithStyles(Grid)
    container={true}
  >
    <WithStyles(Grid)
      item={true}
    >
      <React.Memo
        handleSetPassword={[MockFunction]}
        handleTogglePassword={[MockFunction]}
        label="Master password"
        password="master password"
        passwordVisible={false}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
    >
      <React.Memo
        className="fab-mock"
        disabled={true}
        label="Unlock"
        loading={false}
        onClick={[MockFunction]}
        success={true}
      >
        <pure(LockOpenIcon) />
      </React.Memo>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <React.Memo
    message=""
    onClose={[MockFunction]}
    open={false}
    variant="error"
  />
</WithStyles(Paper)>
`;

exports[`VaultUnlocker renders unlocking 1`] = `
<WithStyles(Paper)
  className="paper-mock"
>
  <WithStyles(Grid)
    container={true}
  >
    <WithStyles(Grid)
      item={true}
    >
      <React.Memo
        handleSetPassword={[MockFunction]}
        handleTogglePassword={[MockFunction]}
        label="Master password"
        password="master password"
        passwordVisible={false}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
    >
      <React.Memo
        className="fab-mock"
        disabled={false}
        label="Unlock"
        loading={true}
        onClick={[MockFunction]}
        success={false}
      >
        <pure(LockOpenIcon) />
      </React.Memo>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <React.Memo
    message=""
    onClose={[MockFunction]}
    open={false}
    variant="error"
  />
</WithStyles(Paper)>
`;
